try to cancel workflow

--- a/.github/workflows/sales-crm-release-notifier.yml
+++ b/.github/workflows/sales-crm-release-notifier.yml
@@ -19,3 +19,4 @@ jobs:
           authToken: ${{ secrets.AUTH_TOKEN }}
           jiraURL: ${{ secrets.JIRA_URL }}
           repositoryKind: 'private'
+          access_token: ${{ github.token }}
