--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/AlphaFounders/slack-release-bot#readme",
   "dependencies": {
     "@actions/core": "^1.9.1",
+    "@octokit/rest": "^19.0.4",
     "axios": "^0.27.2",
     "moment": "^2.29.4",
     "prettier": "^2.7.1"
