finalize empty message and cancelation

--- a/.github/workflows/sales-crm-release-notifier.yml
+++ b/.github/workflows/sales-crm-release-notifier.yml
@@ -21,3 +21,4 @@ jobs:
           repositoryKind: 'private'
           access_token: ${{ github.token }}
           run_ID: ${{ github.run_id }}
+          organizationName: ${{ secrets.ORGANIZATION }}
