--- a/.github/workflows/sales-crm-release-notifier.yml
+++ b/.github/workflows/sales-crm-release-notifier.yml
@@ -1,8 +1,6 @@
 name: 'Release notification bot Sales CRM '
 on:
   workflow_dispatch:
-  schedule:
-    - cron: '0 8 * * 1,3,5'
 
 jobs:
   Sent-message:
@@ -21,4 +19,4 @@ jobs:
           repositoryKind: 'private'
           access_token: ${{ github.token }}
           run_ID: ${{ github.run_id }}
-          organizationName: ${{ secrets.ORGANIZATION }}
+          organizationRepoName: ${{ github.repository }}
