--- a/action.yml
+++ b/action.yml
@@ -31,7 +31,7 @@ inputs:
     required: true
     default: '${{ github.run_id }}'
   organizationRepoName:
-    description: 'Please define your organization's repo name, normally github repository'
+    description: 'Please define your organization repo name, normally github repository'
     required: true
     default: '${{ github.repository }}'
 branding:
